--- a/index.html
+++ b/index.html
@@ -51,20 +51,18 @@
     <main>
         <!-- Preview -->
         <section id="example1">
-            <h2>Example 1</h2>
-            <p>Example 1Example 1Example 1Example 1Example 1Example 1Example 1Example 1Example 1Example 1Example
-                1Example 1.</p>
+            <h2>Dummyjson 'comments'</h2>
+            <p>This is a <a href="https://dummyjson.com/comments?limit=1000">simple example</a> of mixed key-value types. Even if numerical values are IDs (incremental) and
+                maybe have not much sens doing statistic. It was easy for me to find a dummy test 😆</p>
         </section><!-- ./ Preview -->
 
-        <!-- Preview -->
         <section id="example2">
-            <h2>Example 2</h2>
-            <p>Example 2Example 2Example 2Example 2Example 2Example 2Example 2Example 2Example 2Example 2Example
-                2Example 2.</p>
+            <h2>Dummyjson 'products'</h2>
+            <p>Yet a <a href="https://dummyjson.com/products?limit=1000">simple example</a> of mixed key-value types. This shows more the use of <code>pluck</code> to get repeating keys of inner objects with same structure</p>
         </section><!-- ./ Preview -->
 
     </main>
-
+    <script src="data.js"></script>
     <script src="lib.js"></script>
     <script src="main.js" async defer></script>
     <script src="theme-switcher.js"></script>
