--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
         content="Similar to Python Pandas's DataFrame summary function .. This JavaScript function parses objects quickly and returns types and a basic set of statistics about inner arrays like median, average, max, min, etc">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.classless.min.css">
+    <script src="https://cdn.socket.io/4.5.0/socket.io.min.js" integrity="sha384-7EyYLQZgWBi67fBtVxw60/OWl1kjsfrPFcaU0pp0nAh+i8FD068QogUvg85Ewy1k" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -66,9 +67,8 @@
 
     </main>
     <script type="module" src="data.js"></script>
-    <script type="module" src="lib/ObjectStatistics.js"></script>
+    <script type="module" src="ObjectStatistics.js"></script>
     <script type="module" src="main.js"></script>
-
     <script src="theme-switcher.js"></script>
 </body>
 
